# makeit

./: .gitignore  README.md
basic/: CMakeLists.txt  helper.hpp  index.cpp
opengl_startup/: CMakeLists.txt
